--- a/bower.json
+++ b/bower.json
@@ -11,5 +11,12 @@
   },
   "devDependencies": {
     "qunit": "~1.12.0"
-  }
+  },
+  "ignore":[
+  	"**/.*",
+    "node_modules",
+    "bower_components",
+  	"demo",
+  	"test"
+  ] 
 }
